--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.21",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.10.1",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-apollo": "^3.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
