--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "hasura-cli": "^2.0.3",
     "typescript": "4.3.5"
   }
 }
